--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -371,6 +371,21 @@
                     Margin = "2, 0"
                     FontFamily = "{StaticResource DefaultMonospacedFont}"
                     VerticalAlignment = "Center" />
+                <TextBlock
+                    Text = "{Binding GpuUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                    Margin = "2, 0"
+                    FontFamily = "{StaticResource DefaultMonospacedFont}"
+                    VerticalAlignment = "Center" />
+                <TextBlock
+                    Text = "{Binding VramUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                    Margin = "2, 0"
+                    FontFamily = "{StaticResource DefaultMonospacedFont}"
+                    VerticalAlignment = "Center" />
+                <TextBlock
+                    Text = "{Binding Fps,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                    Margin = "2, 0"
+                    FontFamily = "{StaticResource DefaultMonospacedFont}"
+                    VerticalAlignment = "Center" />
             </StackPanel>
         </Border>
     </styleClasses:BaseWindow.FooterContent>
@@ -407,7 +422,9 @@
 
         </GridSplitter>
 
-        <uc:MapControl x:Name="MainMap" Grid.Column="2"></uc:MapControl>
+        <uc:MapControl x:Name = "MainMap"
+                       Grid.Column = "2">
+        </uc:MapControl>
 
         <GridSplitter Grid.Column = "3"
                       Width = "4"
