Fixed Nasty Typo which bothered me for ages

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -238,13 +238,13 @@
                         </uc:SearchableMenuItem.Icon>
                     </uc:SearchableMenuItem>
                     <Separator />
-                    <uc:SearchableMenuItem Header = "AgsSettings"
+                    <uc:SearchableMenuItem Header = "Settings"
                                            Command = "mainWindow:MwCommands.OpenSettingsCommand">
                         <uc:SearchableMenuItem.Icon>
                             <Image Source = "/Arcanum_UI;component/Assets/Icons/16x16/Settings16x16.png" />
                         </uc:SearchableMenuItem.Icon>
                     </uc:SearchableMenuItem>
-                    <uc:SearchableMenuItem Header = "Plugin AgsSettings"
+                    <uc:SearchableMenuItem Header = "Plugin Settings"
                                            Command = "mainWindow:MwCommands.OpenPluginSettingsCommand">
                         <uc:SearchableMenuItem.Icon>
                             <Image Source = "/Arcanum_UI;component/Assets/Icons/16x16/PluginSettings16x16.png" />
