--- a/Arcanum.UI/Components/UserControls/MapControl.xaml
+++ b/Arcanum.UI/Components/UserControls/MapControl.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing"
              xmlns:local="clr-namespace:Arcanum.UI.Components.UserControls"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behaviors="clr-namespace:Arcanum.UI.Components.Behaviors"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300">
@@ -34,6 +36,12 @@
                     <MenuItem Header="Exit" />
                 </ContextMenu>
             </Border.ContextMenu>
+            <b:Interaction.Behaviors>
+                <behaviors:ClickAndDoubleClickBehavior
+                    ClickCommand = "{Binding ClickCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                    DoubleClickCommand = "{Binding DoubleClickCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                    FireSingleClickOnDoubleClick = "True" RespectMouseMove="True"/>
+            </b:Interaction.Behaviors>
         </Border>
 
         <StackPanel x:Name="LoadingPanel" 
