--- a/Arcanum.UI/Components/UserControls/MapControl.xaml
+++ b/Arcanum.UI/Components/UserControls/MapControl.xaml
@@ -1,98 +1,94 @@
-﻿<UserControl x:Class="Arcanum.UI.Components.UserControls.MapControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing"
-             xmlns:local="clr-namespace:Arcanum.UI.Components.UserControls"
-             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:behaviors="clr-namespace:Arcanum.UI.Components.Behaviors"
-             mc:Ignorable="d"
-             d:DesignHeight="300"
-             d:DesignWidth="300">
+﻿<UserControl x:Class = "Arcanum.UI.Components.UserControls.MapControl"
+             xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ed = "http://schemas.microsoft.com/expression/2010/drawing"
+             xmlns:local = "clr-namespace:Arcanum.UI.Components.UserControls"
+             xmlns:b = "http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behaviors = "clr-namespace:Arcanum.UI.Components.Behaviors"
+             mc:Ignorable = "d"
+             d:DesignHeight = "300"
+             d:DesignWidth = "300">
 
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Arcanum_UI;component/Assets/ArcanumShared/DefaultPalette.xaml" />
-                <ResourceDictionary Source="/Arcanum_UI;component/Assets/ArcanumShared/DefaultFonts.xaml" />
+                <ResourceDictionary Source = "/Arcanum_UI;component/Assets/ArcanumShared/DefaultPalette.xaml" />
+                <ResourceDictionary Source = "/Arcanum_UI;component/Assets/ArcanumShared/DefaultFonts.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
         <!-- Main Rendering Container -->
-        <Border x:Name="HwndHostContainer"
-                Background="{StaticResource DefaultBackColorBrush}"
-                BorderBrush="{StaticResource DefaultBorderColorBrush}"
-                BorderThickness="0"
-                Margin="0">
+        <Border x:Name = "HwndHostContainer"
+                Background = "{StaticResource DefaultBackColorBrush}"
+                BorderBrush = "{StaticResource DefaultBorderColorBrush}"
+                BorderThickness = "0"
+                Margin = "0">
             <!-- D3D11HwndHost will be added here from code-behind -->
             <Border.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="DirectX Overlay Menu" />
+                    <MenuItem Header = "DirectX Overlay Menu" />
                     <Separator />
-                    <MenuItem Header="Option 1" />
-                    <MenuItem Header="Option 2" />
-                    <MenuItem Header="Exit" />
+                    <MenuItem Header = "Option 1" />
+                    <MenuItem Header = "Option 2" />
+                    <MenuItem Header = "Exit" />
                 </ContextMenu>
             </Border.ContextMenu>
-            <b:Interaction.Behaviors>
-                <behaviors:ClickAndDoubleClickBehavior
-                    ClickCommand = "{Binding ClickCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                    DoubleClickCommand = "{Binding DoubleClickCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                    FireSingleClickOnDoubleClick = "True" RespectMouseMove="True"/>
-            </b:Interaction.Behaviors>
         </Border>
 
-        <StackPanel x:Name="LoadingPanel" 
-            HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <TextBlock Text="Loading map..."
-                       Foreground="{StaticResource GreyedOutForeColorBrush}"
-                       FontSize="26"
-                       FontWeight="SemiBold"
-                       HorizontalAlignment="Center" />
-            <Path Stroke="{StaticResource LightAccentBackColorBrush}" 
-                  StrokeThickness="5" 
-                  HorizontalAlignment="Center" 
-                  VerticalAlignment="Center"
-                  Margin="40"
-                  RenderTransformOrigin="0,0">
+        <StackPanel x:Name = "LoadingPanel"
+                    HorizontalAlignment = "Center"
+                    VerticalAlignment = "Center">
+            <TextBlock Text = "Loading map..."
+                       Foreground = "{StaticResource GreyedOutForeColorBrush}"
+                       FontSize = "26"
+                       FontWeight = "SemiBold"
+                       HorizontalAlignment = "Center" />
+            <Path Stroke = "{StaticResource LightAccentBackColorBrush}"
+                  StrokeThickness = "5"
+                  HorizontalAlignment = "Center"
+                  VerticalAlignment = "Center"
+                  Margin = "40"
+                  RenderTransformOrigin = "0,0">
                 <Path.Data>
                     <PathGeometry>
                         <!-- Start the arc at the top-center point -->
-                        <PathFigure StartPoint="22.5,22.5">
+                        <PathFigure StartPoint = "22.5,22.5">
                             <!-- The ArcSegment defines the curve -->
-                            <ArcSegment 
-                                Point="42.5,2.5" 
-                                Size="20,20" 
-                                IsLargeArc="True"
-                                SweepDirection="Clockwise"/>
+                            <ArcSegment Point = "42.5,2.5"
+                                        Size = "20,20"
+                                        IsLargeArc = "True"
+                                        SweepDirection = "Clockwise" />
                         </PathFigure>
                     </PathGeometry>
                 </Path.Data>
-            
+
                 <!-- This transform will be animated to create the rotation -->
                 <Path.RenderTransform>
-                    <RotateTransform x:Name="Rotation" Angle="0" CenterX="22.5" CenterY="2.5"/>
+                    <RotateTransform x:Name = "Rotation"
+                                     Angle = "0"
+                                     CenterX = "22.5"
+                                     CenterY = "2.5" />
                 </Path.RenderTransform>
-        
+
                 <Path.Triggers>
-                    <EventTrigger RoutedEvent="Loaded">
+                    <EventTrigger RoutedEvent = "Loaded">
                         <BeginStoryboard>
                             <Storyboard>
-                                <DoubleAnimation Storyboard.TargetName="Rotation"
-                                                 Storyboard.TargetProperty="Angle"
-                                                 From="0"
-                                                 To="360"
-                                                 Duration="0:0:2"
-                                                 RepeatBehavior="Forever" />
+                                <DoubleAnimation Storyboard.TargetName = "Rotation"
+                                                 Storyboard.TargetProperty = "Angle"
+                                                 From = "0"
+                                                 To = "360"
+                                                 Duration = "0:0:2"
+                                                 RepeatBehavior = "Forever" />
                             </Storyboard>
                         </BeginStoryboard>
                     </EventTrigger>
                 </Path.Triggers>
             </Path>
-        
+
         </StackPanel>
     </Grid>
 </UserControl>
