--- a/Arcanum.UI/Components/Views/MainMenuScreen/FeatureViewModel.xaml
+++ b/Arcanum.UI/Components/Views/MainMenuScreen/FeatureViewModel.xaml
@@ -1,12 +1,199 @@
-﻿<UserControl x:Class = "Arcanum.UI.Components.Views.MainMenuScreen.FeatureViewModel"
-             xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable = "d"
-             d:DesignHeight = "300"
-             d:DesignWidth = "300">
+﻿<UserControl x:Class="Arcanum.UI.Components.Views.MainMenuScreen.FeatureViewModel"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="650">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Arcanum_UI;component/Components/Styles/Specific/PresentationCard.xaml" />
+                <ResourceDictionary>
+
+                    <Style x:Key="SocialCardBorderStyle"
+                           TargetType="Border"
+                           BasedOn="{StaticResource PresentationCard}">
+                        <Setter Property="Width"
+                                Value="150" />
+                        <Setter Property="Height"
+                                Value="150" />
+                        <Setter Property="Background"
+                                Value="BlueViolet" />
+                    </Style>
+
+                    <!-- TextBlock Styles -->
+                    <Style x:Key="TitleText"
+                           TargetType="TextBlock">
+                        <Setter Property="Foreground"
+                                Value="White" />
+                        <Setter Property="FontSize"
+                                Value="28" />
+                        <Setter Property="HorizontalAlignment"
+                                Value="Left" />
+                    </Style>
+
+                    <Style x:Key="SectionHeaderText"
+                           TargetType="TextBlock">
+                        <Setter Property="Foreground"
+                                Value="White" />
+                        <Setter Property="FontSize"
+                                Value="20" />
+                        <Setter Property="Margin"
+                                Value="0,0,0,10" />
+                        <Setter Property="HorizontalAlignment"
+                                Value="Left" />
+                    </Style>
+
+                    <Style x:Key="SocialHeaderText"
+                           TargetType="TextBlock">
+                        <Setter Property="FontSize"
+                                Value="20" />
+                        <Setter Property="TextAlignment"
+                                Value="Center" />
+                        <Setter Property="Foreground"
+                                Value="White" />
+                        <Setter Property="VerticalAlignment"
+                                Value="Center" />
+                        <Setter Property="Width"
+                                Value="75" />
+                        <Setter Property="Margin"
+                                Value="2,12,5,0" />
+                    </Style>
+
+                    <Style x:Key="SocialBodyText"
+                           TargetType="TextBlock">
+                        <Setter Property="FontSize"
+                                Value="18" />
+                        <Setter Property="TextAlignment"
+                                Value="Center" />
+                        <Setter Property="Foreground"
+                                Value="LightGray" />
+                        <Setter Property="HorizontalAlignment"
+                                Value="Center" />
+                        <Setter Property="Margin"
+                                Value="5,12,5,5" />
+                    </Style>
+
+                    <!-- Image Style -->
+                    <Style x:Key="SocialIconStyle"
+                           TargetType="Image">
+                        <Setter Property="Width"
+                                Value="60" />
+                        <Setter Property="Height"
+                                Value="60" />
+                        <Setter Property="Margin"
+                                Value="5,10,0,0" />
+                    </Style>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <Grid.Resources>
+            <Style TargetType="Rectangle">
+                <Setter Property="Fill"
+                        Value="{StaticResource DefaultBorderColorBrush}" />
+                <Setter Property="Height"
+                        Value="4" />
+                <Setter Property="Margin"
+                        Value="10, 0" />
+                <Setter Property="RadiusX"
+                        Value="4" />
+                <Setter Property="RadiusY"
+                        Value="4" />
+            </Style>
+        </Grid.Resources>
+
+        <TextBlock Text="Need Help using Arcanum? Discover new features? Check out our User Guide!"
+                   Style="{StaticResource TitleText}"
+                   HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
+                   Margin="0,10,20,10"
+                   VerticalAlignment="Center"
+                   FontSize="22" />
+        <TextBlock Grid.Row="2"
+                   Grid.Column="0"
+                   Text="Want to develop plugins? Dive deeper into the code? Check out our Developer Reference!"
+                   Style="{StaticResource TitleText}"
+                   HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
+                   Margin="0,10,20,10"
+                   VerticalAlignment="Center"
+                   FontSize="22" />
+        <Border Grid.Row="0"
+                Grid.Column="1"
+                Style="{StaticResource SocialCardBorderStyle}"
+                Height="Auto"
+                Width="Auto"
+                Margin="12,20"
+                MouseUp="OpenUserGuide"
+                >
+            <Grid>
+                    <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock
+                               Text="User Guide"
+                               Style="{StaticResource TitleText}"
+                               HorizontalAlignment="Center"
+                               TextWrapping="Wrap"
+                               Margin="10"
+                               VerticalAlignment="Center"
+                               FontSize="44" />
+                    
+                    <Image Grid.Column="1" Source="/Arcanum_UI;component/Assets/Icons/Huge/Book140x140.png"
+                           Stretch="None"
+                           RenderOptions.BitmapScalingMode="HighQuality"
+                           Margin="0,25,10,20" />
+                    
+            </Grid>
+        </Border>
+        <Border Grid.Row="2"
+                Grid.Column="1"
+                Style="{StaticResource SocialCardBorderStyle}"
+                Height="Auto"
+                Width="Auto"
+                Margin="12,20"
+                MouseUp="OpenDevGuide"
+                >
+                <Grid>
+                        <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                    
+                        <TextBlock Grid.Column="1"
+                                   Text="Dev Guide"
+                                   Style="{StaticResource TitleText}"
+                                   HorizontalAlignment="Center"
+                                   TextWrapping="Wrap"
+                                   Margin="10"
+                                   VerticalAlignment="Center"
+                                   FontSize="44" />
+                    
+                        <Image Grid.Column="0" Source="/Arcanum_UI;component/Assets/Icons/Huge/DocsBook140x140.png"
+                               Stretch="None"
+                               RenderOptions.BitmapScalingMode="HighQuality"
+                               Margin="10,25,0,20" />
+                    
+                </Grid>
+        </Border>
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0"/>
     </Grid>
 </UserControl>
